tests/baselines/reference/jsxFactoryAndFragment.errors.txt
tests/cases/compiler/jsxFactoryAndFragment.tsx(3,1): error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.
tests/cases/compiler/jsxFactoryAndFragment.tsx(4,1): error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.
tests/cases/compiler/jsxFactoryAndFragment.tsx(4,17): error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.


==== tests/cases/compiler/jsxFactoryAndFragment.tsx (3 errors) ====
    declare var h: any;
    
    <></>;
    ~~~~~
!!! error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.
    <><span>1</span><><span>2.1</span><span>2.2</span></></>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS17016: JSX fragment needs corresponding `jsxFragFactory` compiler option when using `jsxFactory` compiler option.